chore: replace sql with jooq, wrap migration in transaction, wrap exceptions in molgenis exception