@@ -1,20 +1,28 @@
 package org.molgenis.emx2.sql;
 
+import static org.jooq.impl.DSL.name;
+import static org.jooq.impl.DSL.table;
+import static org.molgenis.emx2.sql.MetadataUtils.*;
+
+import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.InvocationTargetException;
-import java.util.Map;
+import java.util.ArrayList;
+import java.util.List;
+import org.molgenis.emx2.MolgenisException;
 import org.molgenis.emx2.Profile;
+import org.molgenis.emx2.Schema;
 import org.molgenis.emx2.sql.appmigrations.ProfileMigrationStep;
 import org.molgenis.emx2.sql.model.ProfileSchema;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class ProfileMigrations {
-  private static final int DATA_CATALOGUE_CURRENT_PROFILE_STEP = 2;
-  private static final int DCAT_CURRENT_PROFILE_STEP = 0;
-  private static final int PET_STORE_CURRENT_PROFILE_STEP = 0;
+  private static final Integer DATA_CATALOGUE_CURRENT_PROFILE_STEP = 2;
+  private static final Integer DCAT_CURRENT_PROFILE_STEP = 0;
+  private static final Integer PET_STORE_CURRENT_PROFILE_STEP = 0;
 
-  private static final Map<Profile, Integer> profileVersions =
-      Map.of(
+  public static final ImmutableMap<Profile, Integer> profileVersions =
+      ImmutableMap.of(
           Profile.DATA_CATALOGUE,
           DATA_CATALOGUE_CURRENT_PROFILE_STEP,
           Profile.DCAT,
@@ -23,57 +31,77 @@ public class ProfileMigrations {
           PET_STORE_CURRENT_PROFILE_STEP);
   private static final Logger log = LoggerFactory.getLogger(ProfileMigrations.class);
 
-  private static final String QUERY =
-      """
-    select
-      table_schema,
-      profile,
-      profile_migration_step
-    from
-      "MOLGENIS"."schema_metadata"
-    where
-      profile IS NOT NULL
-     AND
-      profile_migration_step IS NOT NULL
-    """;
+  public List<ProfileSchema> runAppSchemaMigrations(SqlDatabase db) {
 
-  public void runAppSchemaMigrations(SqlDatabase db) {
+    List<ProfileSchema> profileSchemas =
+        db
+            .getJooq()
+            .select(TABLE_SCHEMA, SCHEMA_PROFILE, SCHEMA_MIGRATION_STEP)
+            .from(table(name(MOLGENIS, "schema_metadata")))
+            .where(SCHEMA_PROFILE.isNotNull(), SCHEMA_MIGRATION_STEP.isNotNull())
+            .fetch()
+            .stream()
+            .map(ProfileSchema::new)
+            .toList();
+    List<ProfileSchema> updatedProfileSchemas = new ArrayList<>();
+    for (ProfileSchema profileSchema : profileSchemas) {
+      db.tx(
+          database -> {
+            try {
+              int currentSchemaVersion = profileSchema.appMigrationVersion();
+              // keep migrating until we are at the latest version
 
-    var profileSchemas = db.getJooq().fetch(QUERY).stream().map(ProfileSchema::new).toList();
-    for (var profileSchema : profileSchemas) {
-      int currentSchemaVersion = profileSchema.appMigrationVersion();
-      // keep migrating until we are at the latest version
-      while (currentSchemaVersion < profileVersions.get(profileSchema.profile())) {
-        log.info("Migrating profile schema: {}", profileSchema);
-        try {
-          ProfileMigrationStep migration =
-              loadMigration(profileSchema.profile(), currentSchemaVersion);
-          migration.execute(db, profileSchema.schemaName());
-          currentSchemaVersion++;
-        } catch (Exception e) {
-          log.error("Error migrating profile schema: {}", profileSchema, e);
-          break;
-        }
-      }
-      // update the version in the database
-      db.getJooq()
-          .execute(
-              "update \"MOLGENIS\".\"schema_metadata\" set profile_migration_step = "
-                  + currentSchemaVersion
-                  + " where table_schema = '"
-                  + profileSchema.schemaName()
-                  + "'");
+              while (currentSchemaVersion
+                  < profileVersions.getOrDefault(profileSchema.profile(), currentSchemaVersion)) {
+                log.info("Migrating profile schema: {}", profileSchema);
+
+                ProfileMigrationStep migration =
+                    loadMigration(profileSchema.profile(), currentSchemaVersion);
+                migration.execute(db, profileSchema.schemaName());
+                currentSchemaVersion++;
+              }
+              // update the version in the database
+              ProfileSchema updated =
+                  setProfileMigrationStep(db, profileSchema, currentSchemaVersion);
+              updatedProfileSchemas.add(updated);
+            } catch (MolgenisException e) {
+              log.error("Error migrating profile schema: {}", profileSchema, e);
+              throw new MolgenisException(
+                  "Error migrating profile schema: " + profileSchema + " " + e.getMessage(), e);
+            }
+          });
     }
+    return updatedProfileSchemas;
   }
 
-  private ProfileMigrationStep loadMigration(Profile profile, int step)
-      throws ClassNotFoundException,
-          InvocationTargetException,
-          InstantiationException,
-          IllegalAccessException {
-    Class<?> aClass =
-        Class.forName(
-            "org.molgenis.emx2.sql.appmigrations." + profile.name().toLowerCase() + ".Step" + step);
-    return (ProfileMigrationStep) aClass.getConstructors()[0].newInstance();
+  private static ProfileSchema setProfileMigrationStep(
+      SqlDatabase db, ProfileSchema profileSchema, int currentSchemaVersion) {
+    Schema schema =
+        db.setSchemaProfileVersion(
+            db.getSchema(profileSchema.schemaName()),
+            profileSchema.profile(),
+            currentSchemaVersion);
+    return new ProfileSchema(
+        schema.getMetadata().getName(),
+        schema.getMetadata().getProfile(),
+        schema.getMetadata().getProfileMigrationStep());
+  }
+
+  private ProfileMigrationStep loadMigration(Profile profile, int step) {
+    String folderName = profile.name().toLowerCase().replaceAll("_", "");
+    Class<?> aClass;
+    try {
+      aClass = Class.forName("org.molgenis.emx2.sql.appmigrations." + folderName + ".Step" + step);
+    } catch (ClassNotFoundException e) {
+      log.error("No migration found for profile {} step {}", profile, step);
+      throw new MolgenisException("No migration found for profile " + profile + " step " + step, e);
+    }
+    try {
+      return (ProfileMigrationStep) aClass.getConstructors()[0].newInstance();
+    } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
+      log.error("Error instantiating migration for profile {} step {}", profile, step, e);
+      throw new MolgenisException(
+          "Error instantiating migration for profile " + profile + " step " + step, e);
+    }
   }
 }
